--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ src/mesh_2x2/*.out
 src/mesh_2x2/*.vcd
 src/mesh_2x2/*.log
 .vscode/settings.json
+sim/libraries
+sim/modelsim.ini
+sim/transcript
+sim/vsim.wlf
