--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,12 +19,12 @@ jobs:
 
     - name: Compile Verilog design
       run: |
-        pwd
         iverilog -o design_sim src/mvm/*v sim/testbench/mvm_tb.v
 
     - name: Run simulation
       run: |
-        vvp design_sim > simulation.log
+        cd sim
+        vvp ../design_sim > simulation.log
 
     - name: Check simulation results
       run: |
