creating verification step to generate and test random MVM calculations

--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,17 @@ sim/libraries
 sim/modelsim.ini
 sim/transcript
 sim/vsim.wlf
-*.in
-*.out
+sim/*.in
+sim/*.out
 *.txt
 build/noc_adder/
 *.rec*
 *.log
 *.save
+sim/test_files/mvm_test/rf_weights.in
+sim/test_files/mvm_test/output.out
+sim/test_files/mvm_test/input_vec.in
+sim/test_files/mvm_test/gold_output_vector.out
+sim/test_files/mvm_test/transcript
+sim/test_files/mvm_test/input_vec.in
+sim/test_files/mvm_test/rf_weights.in
