--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,16 @@ sim/test_files/mvm_test/gold_output_vector.out
 sim/test_files/mvm_test/transcript
 sim/test_files/mvm_test/input_vec.in
 sim/test_files/mvm_test/rf_weights.in
+build/import_ip.sh
+build/import_ip.tcl
+build/reset_release.ip
+sim/accum_tb.tcl
+sim/test_files/accum_test/accum_wave.do
+sim/test_files/accum_test/output.out
+sim/test_files/mvm_test/input_vec.in
+sim/test_files/mvm_test/rf_weights.in
+sim/testbench/accum_tb.v
+sim/accum_tb.tcl
+sim/test_files/mvm_test/input_vec.in
+sim/test_files/mvm_test/rf_weights.in
+sim/testbench/accum_tb.v
