fixing wave error

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,7 @@ sim/test_files/accum_test/output.out
 sim/test_files/mvm_test/input_vec.in
 sim/test_files/mvm_test/rf_weights.in
 sim/testbench/accum_tb.v
+sim/test_files/mvm_noc/gold_output_vector.out
+sim/test_files/mvm_noc/input_vec.in
+sim/test_files/mvm_noc/output.out
+sim/test_files/mvm_noc/rf_weights.in
